--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">AnimationDemo</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_view_animation">ViewAnimationActivity</string>
+    <string name="title_activity_property_animation">PropertyAnimationActivity</string>
+    <string name="title_activity_frame_animation">FrameAnimationActivity</string>
 </resources>
